--- a/package.json
+++ b/package.json
@@ -1,29 +1,17 @@
 {
-  "name": "LOL-Esports-Prediction-Bot",
+  "name": "lol-esports-prediction-bot",
   "version": "1.0.0",
-  "description": "Discord bot for LOL esports match predictions",
+  "description": "Discord bot for predicting League of Legends esports matches",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-      async getMatchPredictions(matchId) {
-        return new Promise((resolve, reject) => {
-            this.db.all(
-                'SELECT * FROM predictions WHERE match_id = ?',
-                [matchId],
-                (err, rows) => {
-                    if (err) reject(err);
-                    else resolve(rows || []);
-                }
-            );
-        });
-    },
+    "start": "node index.js"
+  },
   "dependencies": {
     "discord.js": "^14.14.1",
-    "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12",
     "node-cron": "^3.0.3",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.7",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
