試一下 架在 Render

--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "canvas": "^3.1.0",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.14.1",
+    "express": "^4.18.2",
     "node-cron": "^3.0.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "pg": "^8.11.3",
+    "puppeteer": "^21.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
@@ -26,4 +29,5 @@
   ],
   "author": "Crazyfighting",
   "license": "MIT"
+  
 }
